  - Include .#* and *~ in files nuked by "mzclean" (stupid CVS).
  - Also nuke directories which no longer exist on the server with
    "mzclean."
  - Ignore .* and *~ files when looking for spec files.
  - Error out if a spec file contains an epoch.
----------------------------------------------------------------------
Wed Aug 25 17:34:05 2004                        Michael Jennings (mej)

Mostly small fixes and touch-ups.  I also added more mzimport
debugging so I can determine exactly how gmkurtzer is managing to
screw the pooch. :-)
----------------------------------------------------------------------
Tue Aug 31 12:59:32 2004                        Michael Jennings (mej)

Hopefully this will fix the relative path problems with importing an
FST from the current directory.
----------------------------------------------------------------------
Tue Aug 31 20:25:41 2004                        Michael Jennings (mej)

Oops.  Broke building of PDR's.
----------------------------------------------------------------------
Tue Sep 14 18:06:06 2004                        Michael Jennings (mej)

Fixed timestamp checking.

Translate perl(Some::Module) to perl-Some-Module for installing build
deps.
----------------------------------------------------------------------
Wed Sep 29 16:57:17 2004                        Michael Jennings (mej)

Note when packages were skipped rather than just saying they built.

Check for updates to packages that were previously broken before
refusing to rebuild them.
----------------------------------------------------------------------
Thu Sep 30 17:59:31 2004                        Michael Jennings (mej)

Fixed diffs of CRLF-delimited files.

Changed default timeout to 900 seconds.
----------------------------------------------------------------------
Sun Oct  3 21:18:30 2004                        Michael Jennings (mej)

Don't barf if stat fails.
----------------------------------------------------------------------