@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: specgen,v 1.6 2004/07/28 21:40:21 mej Exp $
+# $Id: specgen,v 1.7 2004/10/19 19:35:35 mej Exp $
 #
 
 use strict;
@@ -32,6 +32,9 @@ use File::Find;
 use Mezzanine::Util;
 use Mezzanine::Template;
 use Mezzanine::Src;
+use Mezzanine::PkgVars;
+use Mezzanine::Build;
+use Mezzanine::RPM;
 
 my $interactive = 0;
 my %package_start = (
@@ -58,6 +61,7 @@ my %package_start = (
                                             "Specfile auto-generated by $PROGNAME"),
                      "TEMPLATE" => undef
                     );
+
 # Print usage information
 sub
 print_usage_info
@@ -338,7 +342,7 @@ create_spec_file(\%)
     if (! $template->verify()) {
         eprintf("Cannot package; template %s/%s not found.\n",
                 $template->directory(), $template->file());
-        return;
+        return 0;
     }
 
     # Assign variables.
@@ -351,12 +355,89 @@ create_spec_file(\%)
     $ret = $template->generate($specfile);
     if (!defined($ret)) {
         eprint "Unable to open template file -- $!\n";
+        return 0;
     } elsif (! $ret) {
         eprint "Unable to create spec file $specfile -- $!\n";
+        return 0;
     } else {
-        print "Package $pkgname created.\n";
+        dprint "Package $pkgname created.\n";
+        return 1;
     }
 }
+
+sub
+watch_install(\%)
+{
+    my $href = $_[0];
+    my $pkgname = $href->{"NAME"};
+    my ($tmpdir, $savecwd, $buildroot, $err, $msg, $outfiles);
+    my @filelist;
+    my %replace_paths = (
+                         "/usr/bin" => "%{_bindir}",
+                         "/usr/sbin" => "%{_sbindir}",
+                         "/usr/libexec" => "%{_libexecdir}",
+                         "/usr/share" => "%{_datadir}",
+                         "/etc" => "%{_sysconfdir}",
+                         "/usr/com" => "%{_sharedstatedir}",
+                         "/var" => "%{_localstatedir}",
+                         "/usr/lib" => "%{_libdir}",
+                         "/usr/include" => "%{_includedir}",
+                         "/usr/share/info" => "%{_infodir}",
+                         "/usr/share/man" => "%{_mandir}",
+                         "/etc/rc.d/init.d" => "%{_initrddir}",
+                         "/etc/init.d" => "%{_initrddir}",
+                         "/usr" => "%{_prefix}"
+                        );
+
+    $tmpdir = &create_temp_space($pkgname, "build");
+    $buildroot = "$tmpdir/buildroot";
+    $savecwd = &getcwd();
+    if (!chdir($pkgname)) {
+        eprint "Unable to chdir to $pkgname -- $!\n";
+        return;
+    }
+
+    &pkgvar_filename(".");
+    &pkgvar_instructions("$pkgname.spec");
+    &pkgvar_topdir($tmpdir);
+    &mkdirhier($buildroot, 0775);
+    &pkgvar_buildroot($buildroot);
+
+    ($err, $msg, $outfiles) = &build_package();
+    if ($err != MEZZANINE_SUCCESS) {
+        eprint "Unable to run test build -- $msg\n";
+    } else {
+        my @filelist;
+
+        $outfiles =~ s/^.*\.(no)?src\.rpm\s+//;
+        &pkgvar_filename($outfiles);
+        &pkgvar_command("");
+        @filelist = &rpm_show_contents();
+
+        @filelist = grep { $_ !~ /^d/ && $_ !~ m^/usr/share/doc^ } @filelist;
+        for (my $i = 0; $i < scalar(@filelist); $i++) {
+            $filelist[$i] =~ s/^[-a-z]+\s+\d+\s+.{16}\s+\d+\s+\w+\s+\d+\s+[\d:]+\s+//;
+            if (! $filelist[$i]) {
+                splice(@filelist, $i, 1);
+                $i--;
+            } else {
+                foreach my $path (sort { length($b) <=> length($a) } keys(%replace_paths)) {
+                    if ($filelist[$i] =~ /^\Q$path\E/) {
+                        $filelist[$i] =~ s/^\Q$path\E/$replace_paths{$path}/eg;
+                    }
+                }
+            }
+        }
+
+        $href->{"INSTFILES"} = join("\n", @filelist);
+        chdir($savecwd);
+        &create_spec_file($href);
+    }
+
+    chdir($savecwd);
+    &clean_temp_space($tmpdir);
+}
+
 
 # main() here is basically the same as main() in C
 sub
@@ -369,7 +450,7 @@ main
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.6 $ created on $Date: 2004/07/28 21:40:21 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.7 $ created on $Date: 2004/10/19 19:35:35 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"} || !scalar(@ARGV)) {
 	&print_usage_info();
     }
@@ -407,7 +488,11 @@ main
             &confirm_info(\%package);
         }
         &copy_tarball(\%package);
-        &create_spec_file(\%package);
+        if (! &create_spec_file(\%package)) {
+            $errors++;
+            next;
+        }
+        &watch_install(\%package);
     }
     return $errors;
 }
